--- a/package.json
+++ b/package.json
@@ -19,12 +19,19 @@
     "axios": "^1.4.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.6",
+    "formik": "^2.4.2",
     "next": "13.4.6",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
+    "stylis": "^4.2.0",
+    "stylis-plugin-rtl": "^2.1.1",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "yup": "^1.2.0"
+  },
+  "devDependencies": {
+    "@types/stylis": "^4.2.0"
   }
 }
